# KinectServer

./: .cproject  .hgignore  .project  BasicCommunicator.cpp  BasicCommunicator.h  BasicConnectionServer.cpp  BasicConnectionServer.h  BasicTypes.h  CMakeLists.txt  CalibrationWindow.cpp  CalibrationWindow.h  Communicator.cpp  Communicator.h  CommunicatorThread.cpp  CommunicatorThread.h  DataMutex.h  KinectConnector.cpp  KinectConnector.h  MessageStream.cpp  MessageStream.h  NuiData.h  Player.cpp  Player.h  Protocol.h  ReadMe.txt  Recorder.cpp  Recorder.h  RequestListener.cpp  RequestListener.h  RequestProcessor.cpp  RequestProcessor.h  Server.cpp  Server.h  ServerThread.cpp  ServerThread.h  Skeleton.cpp  Skeleton.h  SockUtil.cpp  SockUtil.h  StructuredStream.cpp  (+11 more)
CMakeModules/: FindFOX.cmake  FindKINECTAPI.cmake  FindOSG.cmake  FindOpenCV.cmake  OsgMacroUtils.cmake
testdata/: CaveCalibCVSkeleton.txt  CaveCalibCVSkeletonAdjusted.txt
